# kstash

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml  release.yml
src/argstash/: __init__.py  address.py  api.py  backend.py  backend_base.py  backend_http.py  backend_inline.py  backend_mem.py  backend_s3.py  config.py  exceptions.py  stash.py
src/fdstash/: __init__.py  api.py  backend_base.py  backend_s3.py
tests/: test_address.py  test_api.py  test_backend.py  test_backend_base.py  test_backend_http.py  test_backend_inline.py  test_backend_mem.py  test_backend_registry.py  test_backend_s3.py  test_config.py  test_stash.py
