[project]
name = "argstash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cristiano Cortezia", email = "cristiano.cortezia@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.16",
    "msgpack>=1.1.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src", "typings"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "strict"
stubPath = "typings"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
]
